Finalização da versão inicial do aplicativo

--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "salary-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://carloshximenes.github.io/calculo-salario-liquido",
   "dependencies": {
-    "radium": "^0.26.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "radium": "0.26.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
